// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. font factory should provide a font family, font size and line height that is default scaled for a correct reference 1`] = `
Object {
  "fontFamily": "TimesDigitalW04",
  "fontSize": 16,
  "lineHeight": 27,
}
`;

exports[`2. font factory should provide a font family, font size and line height that is "large" scaled for a correct reference 1`] = `
Object {
  "fontFamily": "TimesDigitalW04",
  "fontSize": 18,
  "lineHeight": 29,
}
`;

exports[`3. font factory should provider a font family, font size and line height that is "xlarge" scaled for a correct reference 1`] = `
Object {
  "fontFamily": "TimesDigitalW04",
  "fontSize": 20,
  "lineHeight": 31,
}
`;

exports[`4. font sizes should give a correct font size for a correct reference scaled to default 1`] = `17`;

exports[`5. font sizes should give a correct font size for a correct reference scaled to "large" 1`] = `19`;

exports[`6. font sizes should give a correct font size for a correct reference scaled to "xlarge" 1`] = `17`;

exports[`7. line height factory should give a correct line height for a correct reference scaled to default 1`] = `31`;

exports[`8. line height factory should give a correct line height for a correct reference scaled to "large" 1`] = `29`;

exports[`9. line height factory should give a correct line height for a correct reference scaled to "xlarge" 1`] = `31`;

exports[`10. animations should have a fadein animation wrapper component 1`] = `
<View
  style={
    Object {
      "opacity": 0,
    }
  }
>
  <Text>
    Hello World
  </Text>
</View>
`;

exports[`10. animations should have a fadein animation wrapper component 2`] = `
<View
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <Text>
    Hello World
  </Text>
</View>
`;
